# django-template

./: .gitignore  .pre-commit.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
app/: db.sqlite3
app/backend/: api.py  settings.py  urls.py
app/core/: api.py  urls.py
app/core/migrations/: 0001_initial.py
app/core/models/: account.py  organization.py
app/core/routers/: __init__.py  accounts.py
app/core/utils/: auth_backend.py  exception_handeling.py
app/core/views/: accounts.py  accounts_ninja.py  views.py
